syntax = "proto3";

package student;

option java_multiple_files = true;


service StudentService {
  rpc CheckStudentExistence (StudentRequest) returns (StudentExistenceResponse);
}

message StudentRequest {
  int64 student_id = 1;
}

message StudentExistenceResponse {
  bool exists = 1;
}
